style.css
head, body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    width: 100%;
    height: 100%;
    font-family: Helvetica, sans-serif, Arial;
    color: #fff;
    background: #252525;
}

a, a:visited {
    color: #63BDEB;
}

:root {
    --twitch-color: #6541A5;
    --mixer-color: #1FBAED;
    --youtube-color: #CC181E;
}

/* TODO Rename to something that makes the difference more obvious */
.hidden {
    display: none !important;
}

.hide {
    visibility: hidden !important;
}

#credit {
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 10px;
}

#stream-gen {
    margin-top: 10%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
}

#stream-gen .input-group {
    margin-top: 10px;
    height: 2.5em;
}

.input-group>*, #extra-options {
    font-size: 125%;
}

input:focus, select:focus, button:focus {
    box-shadow: inset 0 0 4px #54b7d8;
}

input[type="checkbox"] {
    zoom: 1.5;
    vertical-align: middle;
}

#extra-options {
    margin-top: 40px;
    text-align: center;
}

#extra-options span {
    margin-top: 20px;
}

#extra-options span * {
    font-size: 80%;
}

#submit {
    margin-top: 30px;
    font-size: 125%;
}

#stream-gen .wrapper .input-group:first-child > :nth-child(3) {
    border-radius: 0 5px 5px 0;
}

.input-group > :first-child {
    border-radius: 5px 0 0 5px;
}

.input-group > :last-child {
    border-radius: 0 5px 5px 0;
}

.input-group {
    display: flex;
    align-content: stretch;
}

.input-group > input {
    flex: 1 0 auto;
}

input.error, select.error {
    background: #e94657;
    border-style: inset;
    border-color: inherit;
}

input.error::placeholder {
    color: black;
}

.input-group > *, option {
    background: #f8f8f8;
    border-right: #b9b9b9 2px solid;
}

#stream-input {
    margin-top: 10%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

#stream-chats {
    display: flex;
    height: 100%;
}

.banner {
    display: block;
    height: 30px;
    color: #fff;
}

.banner .channelName {
    float: left;
    padding-left: 15px;
    line-height: 30px;
    text-shadow: 2px 2px 4px #000000;
}

.banner .rightWrapper {
    height: 30px;
    float: right;
    display: inline-flex;
    flex-direction: row-reverse;
}

.rightWrapper .icon {
    padding-right: 10px;
    cursor: pointer;
}

.liveIcon {
    width: 15px;
    height: 15px;
    margin-top: 6px;
    border-radius: 10px;
    background-color: #A6A6A6;
    border: 1px solid black;
}

.liveIcon.live {
    background-color: red;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
}

.banner .viewerCount {
    padding: 0 10px;
    line-height: 30px;
    text-shadow: 2px 2px 4px #000000;
}

.banner .channelButton {
    color: #fff;
    background: #2c2c2c;
    text-decoration: none;
    cursor: pointer;
    height: 100%;
    border: none;
    padding: 5px;
}

.noselect {
    user-select: none;
}

.col {
    display: flex;
    flex: 1;
    height: 100vh;
    flex-direction: column;
}

.col .chatWrapper {
    display: flex;
    position: relative;
    width: 100%;
    height: 100%;
}

.col .chatWrapper::after {
    content: " ";
    background-color: #252525;
    position: absolute;
    height: 5px;
    width: 100%;
    cursor: n-resize;
}

iframe {
    flex-grow: 1;
    overflow: hidden;
    padding: 0;
    margin: 0;
    border: 0;
}

.mobile-only {
    font-size: 125%;
    color: #eb6060;
    text-align: center;
    display: none;
}

@media only screen and (max-width: 650px) {
    .mobile-only {
        display: initial !important;
    }
}

